2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* help/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-08  Ryan Lortie  <desrt@desrt.ca>

	* gtik.c: report 3 digits instead of just 2 (as our upstream data
	  source does).  Patch from Jason Thomas <jason@debian.org>.
	  Closes bug #309343.

2005-09-07  Ryan Lortie  <desrt@desrt.ca>

	* gtik.c: clean up all sorts of -Wall warnings (missing headers,
	  unused variables, etc).  Replace populatelist (strtok() based
	  routine) with g_strsplit() equivalent.  Closes bug #310005.

2005-08-19  Ryan Lortie  <desrt@desrt.ca>

	* gtik.c (splitChange): free temporary buffer on error condition
	  early exit.  Leak found & fix provided by Kjartan.

2005-07-21  Ryan Lortie  <desrt@desrt.ca>

	* gtik.schemas.in: gconf key description cleanup (bug #310484)

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

	* docs/*: Clean up unrequired files. XML files will need to go once
	  po files have been generated.
	
	* docs/Makefile.am:
	* docs/gtik2_applet.omf.in:
	* docs/C/gtik2_applet.xml: convert to gnome-doc-utils

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: use GtkColorButton instead of GnomeColorPicker.
	  Patch by Michael Terry <mike@mterry.name>. Closes #170189.

2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gtik.c: (splitChange): Don't free stuff until we're
	done using it.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* access/factory.c: Mark some variables static.
	* gtik.c: (gtik_get_text): Mark function as static.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c:
	   - Update to GtkAboutDialog
	   - Use stock buttons for Add/Remove

2005-01-06  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: Fix incorrect percentages for stocks. Fixes bug #143737.
	  Patch from <prothonotar@tarnation.dyndns.org>.

2004-09-29  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: Resolve some string composition problems in the ticker.
	  Closes #150894.
