@@ -1,3 +1,11 @@
+2005-09-29  Ryan Lortie  <desrt@desrt.ca>
+
+	* gtik.c (updateOutput): properly escape stock symbols for GNOME-VFS
+	  (parseQuote): more or less complete rewrite
+	  (configured): small changes to deal with parseQuote changes
+
+	Based on work by Leena Gunda <leena.gunda@wipro.com>, closes #315604.
+
 2005-09-28  Ryan Lortie  <desrt@desrt.ca>
 
 	* help/Makefile.am: add DOC_FIGURES list to get .png's into the
